Finished swagger doc
